bug-043697 - Admin >> brand media >> if we upload image of 1:1 then cropped logo should get display on collection as well

--- a/application/views/css/main-ltr.css
+++ b/application/views/css/main-ltr.css
@@ -16861,6 +16861,10 @@ img.mfp-img, .post .post_media iframe.mfp-img, .post .post_media .posted-content
     border-radius: 2px; }
     .top-brand-list .brands-logo img, .top-brand-list .brands-logo .post .post_media iframe, .post .post_media .top-brand-list .brands-logo iframe, .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img, .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img, .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img, .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img {
       margin: auto; }
+      .top-brand-list .brands-logo img[data-ratio="16:9"], .top-brand-list .brands-logo .post .post_media iframe[data-ratio="16:9"], .post .post_media .top-brand-list .brands-logo iframe[data-ratio="16:9"], .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="16:9"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img[data-ratio="16:9"], .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="16:9"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img[data-ratio="16:9"] {
+        max-width: 120px; }
+      .top-brand-list .brands-logo img[data-ratio="1:1"], .top-brand-list .brands-logo .post .post_media iframe[data-ratio="1:1"], .post .post_media .top-brand-list .brands-logo iframe[data-ratio="1:1"], .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="1:1"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img[data-ratio="1:1"], .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="1:1"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img[data-ratio="1:1"] {
+        max-width: 60px; }
 
 .wrap-drop {
   position: relative;
