--- a/application/views/css/main-rtl.css
+++ b/application/views/css/main-rtl.css
@@ -16861,6 +16861,10 @@ img.mfp-img, .post .post_media iframe.mfp-img, .post .post_media .posted-content
     border-radius: 2px; }
     .top-brand-list .brands-logo img, .top-brand-list .brands-logo .post .post_media iframe, .post .post_media .top-brand-list .brands-logo iframe, .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img, .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img, .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img, .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img {
       margin: auto; }
+      .top-brand-list .brands-logo img[data-ratio="16:9"], .top-brand-list .brands-logo .post .post_media iframe[data-ratio="16:9"], .post .post_media .top-brand-list .brands-logo iframe[data-ratio="16:9"], .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="16:9"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img[data-ratio="16:9"], .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="16:9"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img[data-ratio="16:9"] {
+        max-width: 120px; }
+      .top-brand-list .brands-logo img[data-ratio="1:1"], .top-brand-list .brands-logo .post .post_media iframe[data-ratio="1:1"], .post .post_media .top-brand-list .brands-logo iframe[data-ratio="1:1"], .top-brand-list .brands-logo .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="1:1"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .top-brand-list .brands-logo img[data-ratio="1:1"], .top-brand-list .brands-logo .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="1:1"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .top-brand-list .brands-logo img[data-ratio="1:1"] {
+        max-width: 60px; }
 
 .wrap-drop {
   position: relative;
@@ -31735,6 +31739,14 @@ a.ui-button:active,
   @media (max-width: 991.98px) {
     .logo-checkout-main {
       max-width: 100px; } }
+  @media (max-width: 1199.98px) {
+    .logo-checkout-main {
+      margin: 0 auto;
+      max-width: 100px; } }
+  .logo-checkout-main img[data-ratio="16:9"], .logo-checkout-main .post .post_media iframe[data-ratio="16:9"], .post .post_media .logo-checkout-main iframe[data-ratio="16:9"], .logo-checkout-main .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="16:9"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .logo-checkout-main img[data-ratio="16:9"], .logo-checkout-main .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="16:9"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .logo-checkout-main img[data-ratio="16:9"] {
+    max-width: 120px; }
+  .logo-checkout-main img[data-ratio="1:1"], .logo-checkout-main .post .post_media iframe[data-ratio="1:1"], .post .post_media .logo-checkout-main iframe[data-ratio="1:1"], .logo-checkout-main .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="1:1"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .logo-checkout-main img[data-ratio="1:1"], .logo-checkout-main .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="1:1"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .logo-checkout-main img[data-ratio="1:1"] {
+    max-width: 60px; }
 
 .order-summary-toggle {
   background: #f3f4f5;
